# raven

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  pyproject.toml
docs/: QUICKSTART.md
examples/01-hello-world/: README.md  hello.py
examples/02-two-processes/: README.md  consumer.py  producer.py
examples/03-news-desk/: README.md  agents.py  run.py
examples/04-server-incident/: .coverage  README.md  agents.py  run.py  server.py
src/claude_bus/: __init__.py  _core.py  aliases.py  client.py  db.py  exceptions.py  http.py  paths.py  schemas.py  session.py
src/claude_bus/cli/: __init__.py  _common.py  ack.py  doctor.py  inbox.py  init.py  main.py  read.py  send.py  serve.py  session.py  tail.py
src/claude_bus/migrations/: 0001_initial.sql
tests/: conftest.py
tests/integration/: test_e2e_prototype.py  test_example_pipelines.py  test_two_processes.py
tests/unit/: test_aliases.py  test_cli.py  test_cli_common.py  test_cli_main.py  test_client.py  test_core.py  test_db.py  test_doctor.py  test_http.py  test_paths.py  test_schemas.py  test_serve.py  test_subscribe.py  test_tail.py
