[project]
name = "raven"
version = "0.1.1"
description = "SQLite-backed role-addressable message bus for agent sessions"
authors = [{ name = "0xDarkMatter" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.12"
keywords = ["message-bus", "agents", "sqlite", "messaging", "claude-code"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "pydantic>=2.0",
    "structlog>=24.0",
    "typer>=0.12",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
http = ["starlette>=0.37", "uvicorn>=0.30"]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5",
    "httpx>=0.27",
    "starlette>=0.37",
    "uvicorn>=0.30",
    "ruff",
]

[project.scripts]
raven = "claude_bus.cli.main:cli_main"

[project.urls]
Homepage = "https://github.com/0xDarkMatter/raven"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/claude_bus"]

[tool.hatch.build.targets.wheel.force-include]
"src/claude_bus/migrations/0001_initial.sql" = "claude_bus/migrations/0001_initial.sql"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-ra"

[tool.coverage.run]
source = ["claude_bus"]
branch = false

[tool.coverage.report]
# Defensive guards + platform-specific paths are tagged `# pragma: no cover`
# inline. With those excluded, the suite covers 100% of executable lines.
exclude_also = [
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]
fail_under = 100
show_missing = true
skip_empty = true

[tool.ruff]
line-length = 100
target-version = "py312"
